--- a/cluster/examples/kubernetes/ceph/cluster.yaml
+++ b/cluster/examples/kubernetes/ceph/cluster.yaml
@@ -22,7 +22,7 @@ spec:
     # versions running within the cluster. See tags available at https://hub.docker.com/r/ceph/ceph/tags/.
     # If you want to be more precise, you can always use a timestamp tag such ceph/ceph:v14.2.5-20190917
     # This tag might not contain a new Ceph version, just security fixes from the underlying operating system, which will reduce vulnerabilities
-    image: ceph/ceph:v14.2.9
+    image: registry.suse.de/devel/storage/7.0/cr/containers/ses/7/ceph/ceph:15.2.1 # {"$ref":"#/definitions/io.k8s.cli.substitutions.ceph-image"}
     # Whether to allow unsupported versions of Ceph. Currently mimic and nautilus are supported, with the recommendation to upgrade to nautilus.
     # Octopus is the version allowed when this is set to true.
     # Do not set to true in production.
@@ -68,20 +68,20 @@ spec:
     # deployed) to set rulesNamespace for all the clusters. Otherwise, you will get duplicate alerts with multiple alert definitions.
     rulesNamespace: rook-ceph
   network:
-    # enable host networking
-    #provider: host
-    # EXPERIMENTAL: enable the Multus network provider
-    #provider: multus
-    #selectors:
-      # The selector keys are required to be `public` and `cluster`.
-      # Based on the configuration, the operator will do the following:
-      #   1. if only the `public` selector key is specified both public_network and cluster_network Ceph settings will listen on that interface
-      #   2. if both `public` and `cluster` selector keys are specified the first one will point to 'public_network' flag and the second one to 'cluster_network'
-      #
-      # In order to work, each selector value must match a NetworkAttachmentDefinition object in Multus
-      #
-      #public: public-conf --> NetworkAttachmentDefinition object name in Multus
-      #cluster: cluster-conf --> NetworkAttachmentDefinition object name in Multus
+  # enable host networking
+  #provider: host
+  # EXPERIMENTAL: enable the Multus network provider
+  #provider: multus
+  #selectors:
+  # The selector keys are required to be `public` and `cluster`.
+  # Based on the configuration, the operator will do the following:
+  #   1. if only the `public` selector key is specified both public_network and cluster_network Ceph settings will listen on that interface
+  #   2. if both `public` and `cluster` selector keys are specified the first one will point to 'public_network' flag and the second one to 'cluster_network'
+  #
+  # In order to work, each selector value must match a NetworkAttachmentDefinition object in Multus
+  #
+  #public: public-conf --> NetworkAttachmentDefinition object name in Multus
+  #cluster: cluster-conf --> NetworkAttachmentDefinition object name in Multus
   rbdMirroring:
     # The number of daemons that will perform the rbd mirroring.
     # rbd mirroring must be configured with "rbd mirror" from the rook toolbox.
@@ -96,84 +96,86 @@ spec:
     # To signify that automatic deletion is desired, use the value "yes-really-destroy-data". Only this and an empty
     # string are valid values for this field.
     deleteDataDirOnHosts: ""
-  # To control where various services will be scheduled by kubernetes, use the placement configuration sections below.
-  # The example under 'all' would have all services scheduled on kubernetes nodes labeled with 'role=storage-node' and
-  # tolerate taints with a key of 'storage-node'.
-#  placement:
-#    all:
-#      nodeAffinity:
-#        requiredDuringSchedulingIgnoredDuringExecution:
-#          nodeSelectorTerms:
-#          - matchExpressions:
-#            - key: role
-#              operator: In
-#              values:
-#              - storage-node
-#      podAffinity:
-#      podAntiAffinity:
-#      topologySpreadConstraints:
-#      tolerations:
-#      - key: storage-node
-#        operator: Exists
-# The above placement information can also be specified for mon, osd, and mgr components
-#    mon:
-# Monitor deployments may contain an anti-affinity rule for avoiding monitor
-# collocation on the same node. This is a required rule when host network is used
-# or when AllowMultiplePerNode is false. Otherwise this anti-affinity rule is a
-# preferred rule with weight: 50.
-#    osd:
-#    mgr:
+    # To control where various services will be scheduled by kubernetes, use the placement configuration sections below.
+    # The example under 'all' would have all services scheduled on kubernetes nodes labeled with 'role=storage-node' and
+    # tolerate taints with a key of 'storage-node'.
+  #  placement:
+  #    all:
+  #      nodeAffinity:
+  #        requiredDuringSchedulingIgnoredDuringExecution:
+  #          nodeSelectorTerms:
+  #          - matchExpressions:
+  #            - key: role
+  #              operator: In
+  #              values:
+  #              - storage-node
+  #      podAffinity:
+  #      podAntiAffinity:
+  #      topologySpreadConstraints:
+  #      tolerations:
+  #      - key: storage-node
+  #        operator: Exists
+  # The above placement information can also be specified for mon, osd, and mgr components
+  #    mon:
+  # Monitor deployments may contain an anti-affinity rule for avoiding monitor
+  # collocation on the same node. This is a required rule when host network is used
+  # or when AllowMultiplePerNode is false. Otherwise this anti-affinity rule is a
+  # preferred rule with weight: 50.
+  #    osd:
+  #    mgr:
+
   annotations:
-#    all:
-#    mon:
-#    osd:
-# If no mgr annotations are set, prometheus scrape annotations will be set by default.
-#   mgr:
+  #    all:
+  #    mon:
+  #    osd:
+  # If no mgr annotations are set, prometheus scrape annotations will be set by default.
+  #   mgr:
   resources:
-# The requests and limits set here, allow the mgr pod to use half of one CPU core and 1 gigabyte of memory
-#    mgr:
-#      limits:
-#        cpu: "500m"
-#        memory: "1024Mi"
-#      requests:
-#        cpu: "500m"
-#        memory: "1024Mi"
-# The above example requests/limits can also be added to the mon and osd components
-#    mon:
-#    osd:
-#    prepareosd:
-#    crashcollector:
+  # The requests and limits set here, allow the mgr pod to use half of one CPU core and 1 gigabyte of memory
+  #    mgr:
+  #      limits:
+  #        cpu: "500m"
+  #        memory: "1024Mi"
+  #      requests:
+  #        cpu: "500m"
+  #        memory: "1024Mi"
+  # The above example requests/limits can also be added to the mon and osd components
+  #    mon:
+  #    osd:
+  #    prepareosd:
+  #    crashcollector:
   # The option to automatically remove OSDs that are out and are safe to destroy.
   removeOSDsIfOutAndSafeToRemove: false
-#  priorityClassNames:
-#    all: rook-ceph-default-priority-class
-#    mon: rook-ceph-mon-priority-class
-#    osd: rook-ceph-osd-priority-class
-#    mgr: rook-ceph-mgr-priority-class
+  #  priorityClassNames:
+  #    all: rook-ceph-default-priority-class
+  #    mon: rook-ceph-mon-priority-class
+  #    osd: rook-ceph-osd-priority-class
+  #    mgr: rook-ceph-mgr-priority-class
   storage: # cluster level storage configuration and selection
     useAllNodes: true
     useAllDevices: true
     #deviceFilter:
     config:
-      # metadataDevice: "md0" # specify a non-rotational storage so ceph-volume will use it as block db device of bluestore.
-      # databaseSizeMB: "1024" # uncomment if the disks are smaller than 100 GB
-      # journalSizeMB: "1024"  # uncomment if the disks are 20 GB or smaller
-      # osdsPerDevice: "1" # this value can be overridden at the node or device level
-      # encryptedDevice: "true" # the default value for this option is "false"
-# Individual nodes and their config can be specified as well, but 'useAllNodes' above must be set to false. Then, only the named
-# nodes below will be used as storage resources.  Each node's 'name' field should match their 'kubernetes.io/hostname' label.
-#    nodes:
-#    - name: "172.17.4.201"
-#      devices: # specific devices to use for storage can be specified for each node
-#      - name: "sdb"
-#      - name: "nvme01" # multiple osds can be created on high performance devices
-#        config:
-#          osdsPerDevice: "5"
-#      - name: "/dev/disk/by-id/ata-ST4000DM004-XXXX" # devices can be specified using full udev paths
-#      config: # configuration can be specified at the node level which overrides the cluster level config
-#        storeType: filestore
-#    - name: "172.17.4.301"
-#      deviceFilter: "^sd."
+    # metadataDevice: "md0" # specify a non-rotational storage so ceph-volume will use it as block db device of bluestore.
+    # databaseSizeMB: "1024" # uncomment if the disks are smaller than 100 GB
+    # journalSizeMB: "1024"  # uncomment if the disks are 20 GB or smaller
+    # osdsPerDevice: "1" # this value can be overridden at the node or device level
+    # encryptedDevice: "true" # the default value for this option is "false"
+  # Individual nodes and their config can be specified as well, but 'useAllNodes' above must be set to false. Then, only the named
+  # nodes below will be used as storage resources.  Each node's 'name' field should match their 'kubernetes.io/hostname' label.
+  #    nodes:
+  #    - name: "172.17.4.201"
+  #      devices: # specific devices to use for storage can be specified for each node
+  #      - name: "sdb"
+  #      - name: "nvme01" # multiple osds can be created on high performance devices
+  #        config:
+  #          osdsPerDevice: "5"
+  #      - name: "/dev/disk/by-id/ata-ST4000DM004-XXXX" # devices can be specified using full udev paths
+  #      config: # configuration can be specified at the node level which overrides the cluster level config
+  #        storeType: filestore
+  #    - name: "172.17.4.301"
+  #      deviceFilter: "^sd."
+
   # The section for configuring management of daemon disruptions during upgrade or fencing.
   disruptionManagement:
     # If true, the operator will create and manage PodDisruptionBudgets for OSD, Mon, RGW, and MDS daemons. OSD PDBs are managed dynamically
